--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -1,5 +1,9 @@
 name: mi-primer-workflow
 run-name: is learning GHA
+uses: distributhor/workflow-webhook@v2
+env:
+ webhook_url: https://events.hookdeck.com/e/src_P61PLvB5SC32
+ webhook_secret: ABCD1234
 on: [push]
 jobs:
  mijob:
