--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -1,12 +1,12 @@
 name: mi-primer-workflow
 run-name: is learning GHA
-uses: distributhor/workflow-webhook@v2
-env:
- webhook_url: https://events.hookdeck.com/e/src_P61PLvB5SC32
- webhook_secret: ABCD1234
 on: [push]
 jobs:
  mijob:
   runs-on: ubuntu-latest
   steps:
-   - run: ls
+  - name: Webhook
+    uses: distributhor/workflow-webhook@v2
+    env:
+     webhook_url: https://events.hookdeck.com/e/src_P61PLvB5SC32
+     webhook_secret: ABCD1234
