--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -14,4 +14,5 @@ jobs:
     uses: distributhor/workflow-webhook@v2
     env:
      webhook_url: https://events.hookdeck.com/e/src_P61PLvB5SC32
+     webhook_secret: ABCD1234
 
