--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -10,6 +10,7 @@ jobs:
  mijob:
   runs-on: ubuntu-latest
   steps:
+  - cat nuevo.txt
   - name: Webhook
     uses: distributhor/workflow-webhook@v2
     env:
