--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -10,7 +10,8 @@ jobs:
  mijob:
   runs-on: ubuntu-latest
   steps:
-  - run: cat nuevo.txt
+  - run: pwd
+  - run: ls
   - name: Webhook
     uses: distributhor/workflow-webhook@v2
     env:
