--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -45,6 +45,7 @@ jobs:
   - name: Webhook
     uses: distributhor/workflow-webhook@v2
     env:
+     webhook_type: 'json-extended'
      webhook_url: https://events.hookdeck.com/e/src_P61PLvB5SC32
      webhook_secret: ABCD1234
      data: ${{ env.mienv }}
