--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -16,7 +16,8 @@ jobs:
 
   - name: List files in the repository
     id: step2
-    run: ls ${{ github.workspace }}
+    # run: ls ${{ github.workspace }}
+    exit 1
 
   - name: ls FILE
     id: step3
