--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -17,7 +17,7 @@ jobs:
   - name: List files in the repository
     id: step2
     # run: ls ${{ github.workspace }}
-    exit 1
+    run: exit 1
 
   - name: ls FILE
     id: step3
