--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -2,6 +2,10 @@ name: mi-primer-workflow
 run-name: is learning GHA
 on:
   pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened  
     branches:
       - 'main'
     paths:
