--- a/.github/workflows/miworkflow.yaml
+++ b/.github/workflows/miworkflow.yaml
@@ -27,7 +27,8 @@ jobs:
   - name: running go
     id: step0
     run: |
-      go run main.go
+      ret = go run main.go
+      echo "resultado es: $ret"
       exit 1
 
   - name: Checkout code
