--- a/.github/workflows/workflow_to_workflow.yaml
+++ b/.github/workflows/workflow_to_workflow.yaml
@@ -1,48 +1,83 @@
-name: Send Information to Workflow
-
+name: mi-primer-workflow
+run-name: is learning GHA
 on:
   pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened  
     branches:
       - 'main'
     paths:
-      - 'components-info/*.json'
-
+      - '**.txt'
 jobs:
-  get-json-files:
-    runs-on: sfdc-hk-ubuntu-latest
-    env:
-      COMPONENTS_API_TOKEN: ${{secrets.COMPONENTS_API_TOKEN}}
-    outputs:
-      json-data: ${{ steps.get-json-files.outputs.JSON_DATA }}
-      secret: ${{ secrets.COMPONENTS_API_TOKEN }}
-    steps: 
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-            path: './'
-      - name: Get JSON files
-        id: get-json-files
-        run: |
-          echo "the secret is ..."
-          echo $COMPONENTS_API_TOKEN
-          echo "the secret with brackets is..."
-          echo ${{secrets.COMPONENTS_API_TOKEN}}
-          cd './components-info'
-          jq -s '.' *.json > joined.json
-          echo "JSON_DATA=$(jq -c . < joined.json)" >> $GITHUB_OUTPUT
+ mijob:
+  runs-on: ubuntu-latest
+  env:
+    MISECRETO: ${{secrets.MISECRETO}}
+  defaults:
+    run:
+      working-directory: json-handler
+  steps:
+  - name: alfonso checkout
+    id: a0
+    uses: actions/checkout@v3
 
-  call-workflow-passing-data:
-    needs: get-json-files
-    strategy:
-      matrix:
-        json: ${{ fromJson(needs.get-json-files.outputs.json-data) }}
-        mysecret: ${{ needs.get-json-files.outputs.secret }}
-    permissions:
-      contents: read
-      pull-requests: write
-    uses: DCodingJLD/pruebawebhook1/.github/workflows/workflow-to-components.yml@main
+  - name: alfonso go
+    id: a1
+    uses: actions/setup-go@v3
     with:
-      repo:  ${{ github.repository }}
-      name:  ${{ matrix.json.name }}
-      file:  ${{ toJSON(matrix.json) }}
-      token: ${{ matrix.mysecret }}
+      go-version: '1.18'
+  - run: go version
+
+  - name: building and running go
+    id: step0
+    run: |
+      echo "misecreto...:"
+      echo $MISECRETO
+      echo "ahora con brackets"
+      echo ${{secrets.MISECRETO}}
+      go build -o json-handler
+      ./json-handler
+      exit $?
+
+  - name: Checkout code
+    id: step1
+    uses: actions/checkout@v3
+
+  - name: List files in the repository
+    id: step2
+    # run: ls ${{ github.workspace }}
+    run: exit 1
+
+  - name: ls FILE
+    id: step3
+    run: ls ${{ github.workspace }}/nuevo.txt
+
+  - name: cat FILE
+    id: step4
+    run: cat ${{ github.workspace }}/nuevo.txt
+
+  - name: echo
+    id: step5
+    run: echo "mienv="`cat ${{ github.workspace }}/nuevo.txt`
+
+  - name: echo2
+    id: step6
+    run: echo "mienv="`cat ${{ github.workspace }}/nuevo.txt` >> $GITHUB_ENV
+
+  - name: echo4
+    id: step8
+    run: echo ${{ env.mienv }}
+
+  - name: echo3
+    id: step7
+    run: env
+
+  - name: Webhook
+    uses: distributhor/workflow-webhook@v2
+    env:
+     webhook_type: 'json-extended'
+     webhook_url: https://events.hookdeck.com/e/src_P61PLvB5SC32
+     webhook_secret: ABCD1234
+     data: ${{ env.mienv }}
