--- a/.github/workflows/workflow_to_workflow.yaml
+++ b/.github/workflows/workflow_to_workflow.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   get-json-files:
-    runs-on: sfdc-hk-ubuntu-latest
+    runs-on: ubuntu-latest
     env:
       COMPONENTS_API_TOKEN: ${{secrets.COMPONENTS_API_TOKEN}}
     outputs:
