--- a/.github/workflows/workflow-to-components.yml
+++ b/.github/workflows/workflow-to-components.yml
@@ -14,7 +14,7 @@ on:
         required: false
         type: string
       token:
-        required: true
+        required: false
         type: string
 
 jobs:
