--- a/.github/workflows/workflow_to_workflow.yaml
+++ b/.github/workflows/workflow_to_workflow.yaml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'components-info/*.json'
 env:
-  mascot: ${{secrets.COMPONENTS_API_TOKEN}}
+  mascot: pepe
 
 jobs:
   get-json-files:
@@ -49,6 +49,6 @@ jobs:
       repo:  ${{ github.repository }}
       name:  ${{ matrix.json.name }}
       file:  ${{ toJSON(matrix.json) }}
-    secrets:
       token: $mascot
+    secrets: inherit
           
