--- a/.github/workflows/workflow_to_workflow.yaml
+++ b/.github/workflows/workflow_to_workflow.yaml
@@ -49,6 +49,6 @@ jobs:
       repo:  ${{ github.repository }}
       name:  ${{ matrix.json.name }}
       file:  ${{ toJSON(matrix.json) }}
-    secrets:
-      token: ${{secrets.ORG_SECRET}}
+#    secrets:
+#      token: ${{secrets.ORG_SECRET}}
           
