--- a/.github/workflows/workflow_to_workflow.yaml
+++ b/.github/workflows/workflow_to_workflow.yaml
@@ -7,10 +7,16 @@ on:
     paths:
       - 'components-info/*.json'
   pull_request:
+    types:
+      - opened
+      - synchronize
     branches:
       - 'main'
     paths:
       - 'components-info/*.json'
+
+env:
+  IS_PR: false
 
 jobs:
   get-json-files:
@@ -29,6 +35,14 @@ jobs:
         uses: actions/checkout@v3
         with:
             path: './'
+      - name: determin_workflow
+        if: github.event.pull_request && (github.event.action == "opened" || github.event.action == "synchronize")
+        run: |
+          echo "ghea:..."
+          echo github.event.action
+          echo $IS_PR
+          $IS_PR=true
+          echo $IS_PR
       - name: Get JSON files
         id: get-json-files
         run: |
