--- a/.github/workflows/workflow_to_workflow.yaml
+++ b/.github/workflows/workflow_to_workflow.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
             path: './'
       - name: determin_workflow
-        if: github.event.pull_request && (github.event.action == "opened" || github.event.action == "synchronize")
+        if: github.event.pull_request && (github.event.action == 'opened' || github.event.action == 'synchronize')
         run: |
           echo "ghea:..."
           echo github.event.action
