--- a/.github/workflows/workflow_to_workflow.yaml
+++ b/.github/workflows/workflow_to_workflow.yaml
@@ -42,8 +42,9 @@ jobs:
         if: github.event.pull_request && (github.event.action == 'opened' || github.event.action == 'synchronize')
         run: |
           echo "ghea:..."
-          echo $github.event.action
+          echo ${{ github.event.action }}
           echo $IS_PR
+          echo $IS_TRUE
           echo "IS_PR=$IS_TRUE" >> $GITHUB_OUTPUT
           echo $IS_PR
       - name: Get JSON files
