--- a/.github/workflows/workflow-to-components.yml
+++ b/.github/workflows/workflow-to-components.yml
@@ -15,7 +15,7 @@ on:
         type: string
       is_pr:
         required: false
-        type: string
+        type: boolean
     secrets:
       token:
         required: false
