--- a/.github/workflows/workflow-to-components.yml
+++ b/.github/workflows/workflow-to-components.yml
@@ -31,10 +31,20 @@ jobs:
       COMPONENTS_GHA_JSON_TOKEN: ${{secrets.token}}
     defaults:
       run:
-        working-directory: DCodingJLD/pruebawebhook1/json-handler
+        working-directory: json-handler
     steps:
       - name: Check out repo's default branch
         uses: actions/checkout@v3
+      - name: Check out the master repo default branch
+        uses: actions/checkout@v3
+        with:
+          repository: DCodingJLD/pruebawebhook1
+          path: './bar'        
+      - name: listar nuevo repo
+        run: |
+          ls -all
+          cd bar
+          ls -all
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
