--- a/.github/workflows/workflow-to-components.yml
+++ b/.github/workflows/workflow-to-components.yml
@@ -36,11 +36,10 @@ jobs:
       - name: Check out repo's default branch
         uses: actions/checkout@v3
       - name: Check out the master repo default branch
-        uses: actions/checkout@v2
+      - uses: sudosubin/git-clone-action@v1
         with:
-          repository: DCodingJLD/pruebawebhook1
-          path: docs/2.x
-          ref: 2.x   
+          repository: 'DCodingJLD/pruebawebhook1'
+          platform: 'github'
       - name: listar nuevo repo
         run: |
           ls -all
