--- a/.github/workflows/workflow-to-components.yml
+++ b/.github/workflows/workflow-to-components.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           repository: DCodingJLD/pruebawebhook1
           path: my-tools
+          token: ${{ github.token }}
       - name: listar nuevo repo
         run: |
           ls -all
